img fix
fixed the images overlaping with one another on really small screens

--- a/css/main.css
+++ b/css/main.css
@@ -49,8 +49,6 @@ body {
           transform: translateX(1500px);
 }
 
-/* span animation, span transition */
-
 .swiper-container .swiper-wrapper .swiper-slide .slider_text_wrap span.slide_animation {
   -webkit-transform: translateX(0px);
           transform: translateX(0px);
@@ -68,7 +66,7 @@ body {
           transform: translateX(1000px);
   opacity: 0;
 }
-/* text amnimation, text transition */
+
 .swiper-container .swiper-wrapper .swiper-slide .slider_text_wrap h1.slide_animation {
   -webkit-transform: translateX(0px);
           transform: translateX(0px);
@@ -112,11 +110,15 @@ body {
   position: absolute;
   bottom: 0;
   right: 10%;
+  display: block;
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   -webkit-transform: translateX(1000px);
           transform: translateX(1000px);
   opacity: 0;
 }
-/* image animation, image transition */
+
 .swiper-container .swiper-wrapper .swiper-slide img.slide_animation {
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -139,8 +141,6 @@ body {
   font-size: 2.2rem;
   color: white;
 }
-
-/* slider colors, slide colors */
 
 .swiper-container .swiper-wrapper .slide_color:nth-child(1) {
   background: #e29578;
