--- a/sass/_slider.sass
+++ b/sass/_slider.sass
@@ -61,6 +61,9 @@
                 position: absolute
                 bottom: 0
                 right: 10%
+                display: block
+                max-width: 100%
+                object-fit: cover
                 transform: translateX(1000px)
                 opacity: 0
             img.slide_animation
